--- a/index.html
+++ b/index.html
@@ -1,10 +1,31 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <title>مرحباً في موقع DR Abdelrehman Salah</title>
-</head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>موقع د. عبد الرحمن القانوني</title>
+    <link rel="stylesheet" href="style.css"> </head>
 <body>
-    <h1>مرحباً في موقع DR Abdelrehman Salah</h1>
+    <div class="main-container">
+        <header class="site-header">
+            <h1>مرحبا بكم في منصة د. عبد الرحمن لطلاب الحقوق</h1>
+            <p>المحتوى القانوني لطلاب ليسانس الحقوق - جامعة [اسم جامعتك هنا اختيارياً]</p>
+        </header>
+
+        <nav class="year-navigation">
+            <a href="#first-year-content" class="year-button">الفرقة الأولى</a>
+            <a href="#second-year-content" class="year-button">الفرقة الثانية</a>
+            <a href="#third-year-content" class="year-button">الفرقة الثالثة</a>
+            <a href="#fourth-year-content" class="year-button">الفرقة الرابعة</a>
+        </nav>
+
+        <main id="content-area">
+            <p>اختر إحدى الفرق أعلاه لعرض المواد الدراسية والملخصات.</p>
+        </main>
+
+        <footer class="site-footer">
+            <p>&copy; 2025 د. عبد الرحمن - جميع الحقوق محفوظة</p>
+        </footer>
+    </div>
 </body>
 </html>
