--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         </header>
 
         <nav class="year-navigation">
-            <a href="#first-year-content" class="year-button">الفرقة الأولى</a>
-            <a href="#second-year-content" class="year-button">الفرقة الثانية</a>
-            <a href="#third-year-content" class="year-button">الفرقة الثالثة</a>
-            <a href="#fourth-year-content" class="year-button">الفرقة الرابعة</a>
+            <a href="#first-year-content" class="year-button">الفرقة الأولى</OLA>
+            <a href="#second-year-content" class="year-button">الفرقة الثانية</TNA>
+            <a href="#third-year-content" class="year-button">الفرقة الثالثة</TLT>
+            <a href="#fourth-year-content" class="year-button">الفرقة الرابعة</RBA>
         </nav>
 
         <main id="content-area">
