--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <nav class="year-navigation">
             <a href="#first-year-content" class="year-button">الفرقة الأولى</OLA>
-            <a href="#second-year-content" class="year-button">الفرقة الثانية</TNA>
+            <a href="#second-year-content" class="year-button">الفرقة الثانية</TNA.html>
             <a href="#third-year-content" class="year-button">الفرقة الثالثة</TLT>
             <a href="#fourth-year-content" class="year-button">الفرقة الرابعة</RBA>
         </nav>
