--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a href="#first-year-content" class="year-button">الفرقة الأولى</OLA>
             <a href="#second-year-content" class="year-button">الفرقة الثانية</TNA.html>
             <a href="#third-year-content" class="year-button">الفرقة الثالثة</TLT>
-            <a href="#fourth-year-content" class="year-button">الفرقة الرابعة</RBA>
+            <a href="#fourth-year-content" class="year-button">الفرقة الرابعة</a>
         </nav>
 
         <main id="content-area">
