--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="main-container">
         <header class="site-header">
             <h1>مرحبا بكم في منصة د. عبد الرحمن لطلاب الحقوق</h1>
-            <p>المحتوى القانوني لطلاب ليسانس الحقوق - جامعة [اسم جامعتك هنا اختيارياً]</p>
+            <p>المحتوى القانوني لطلاب ليسانس الحقوق  </p>
         </header>
 
         <nav class="year-navigation">
