--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>موقع د. عبد الرحمن القانوني</title>
+    <title>موقع د. عبد الرحمن صلاح القانوني</title>
     <link rel="stylesheet" href="style.css"> </head>
 <body>
     <div class="main-container">
         <header class="site-header">
-            <h1>مرحبا بكم في منصة د. عبد الرحمن لطلاب الحقوق</h1>
+            <h1>مرحبا بكم في منصة د. عبد الرحمن صلاح لطلاب الحقوق</h1>
             <p>المحتوى القانوني لطلاب ليسانس الحقوق  </p>
         </header>
 
