--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
             <p>المحتوى القانوني لطلاب ليسانس الحقوق  </p>
         </header>
 
-        <nav class="year-navigation">
-            <a href="#first-year-content" class="year-button">الفرقة الأولى</OLA>
-            <a href="#second-year-content" class="year-button">الفرقة الثانية</TNA.html>
-            <a href="#third-year-content" class="year-button">الفرقة الثالثة</TLT>
-            <a href="#fourth-year-content" class="year-button">الفرقة الرابعة</a>
-        </nav>
+     <nav class="year-navigation">
+    <a href="first-year.html" class="year-button">الفرقة الأولى</a>
+    <a href="second-year.html" class="year-button">الفرقة الثانية</a>
+    <a href="#third-year-content" class="year-button">الفرقة الثالثة</a>
+    <a href="#fourth-year-content" class="year-button">الفرقة الرابعة</a>
+</nav>
+
 
         <main id="content-area">
             <p>اختر إحدى الفرق أعلاه لعرض المواد الدراسية والملخصات.</p>
